<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/dialog_file_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_file_rename_title"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_18ssp"/>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputRenameDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textSize="@dimen/_14ssp"
            android:textColor="?attr/textcolor"
            android:fontFamily="@font/poppins"
            android:inputType="textCapWords"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_10sdp">

            <Button
                android:id="@+id/btnCancelRenameDialog"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:fontFamily="@font/poppins"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:background="@drawable/button_background"
                android:letterSpacing="0"
                android:padding="0dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />

            <Button
                android:id="@+id/btnOkRenameDialog"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_25sdp"
                android:fontFamily="@font/poppins"
                android:insetTop="0dp"

                android:insetBottom="0dp"
                android:background="@drawable/button_background"
                android:letterSpacing="0"
                android:padding="0dp"
                android:text="@string/ok"
                android:layout_marginStart="@dimen/_10sdp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>
</layout>