<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimaryDark"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="24dp"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_16ssp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />














        <LinearLayout
            android:id="@+id/li"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help">

            <TextView
                android:id="@+id/deny"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:ellipsize="end"
android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:minWidth="@dimen/_60sdp"
                android:text="@string/cancel"
android:textSize="@dimen/_14sdp"

                android:textAllCaps="true"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_weight="1"
                android:gravity="center"
                android:minWidth="@dimen/_60sdp"
                android:textSize="@dimen/_14sdp"
                android:text="@string/exit"
                android:fontFamily="@font/poppins"
                android:ellipsize="end"
                android:textAllCaps="true"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>